Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Test Project</title>
 </head>
 <body>
-<h1>Test Project</h1>
+<h1>Download Files...</h1>
+  <a href="Microsoft.com">Microsoft.com</a>
 </body>
 </html>
